# PFN-Causal-Inference-Benckmark

./: LICENSE  README.md  benchmarknotebook.ipynb  generateSyntheticData.ipynb  pyproject.toml  req.txt  requirements.txt
DATA_standard/: causaldatasettest.py  gen_standard_syn.py
