[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pfncausalinference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.0",
    "babel==2.17.0",
    "backcall==0.2.0",
    "backrefs==5.8",
    "black==25.1.0",
    "causalpfn>=0.1.4",
    "certifi==2025.4.26",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "distlib==0.3.9",
    "dowhy>=0.12",
    "econml>=0.16.0",
    "einops==0.8.1",
    "exceptiongroup==1.3.0",
    "filelock==3.18.0",
    "fonttools==4.58.1",
    "fsspec==2025.5.1",
    "ghp-import==2.1.0",
    "griffe==1.7.3",
    "grpcio==1.71.0",
    "hf-xet==1.1.2",
    "huggingface-hub==0.32.2",
    "identify==2.6.12",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "importlib_resources==6.5.2",
    "iniconfig==2.1.0",
    "ipykernel==6.30.1",
    "ipython==7.33.0",
    "ipywidgets>=8.1.8",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "jupyter>=1.1.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "kiwisolver==1.4.7",
    "Markdown==3.8",
    "markdown-exec==1.10.3",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mergedeep==1.3.4",
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.2",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-glightbox==0.4.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.6.14",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.11",
    "mpmath==1.3.0",
    "mypy==1.16.0",
    "mypy_extensions==1.1.0",
    "nest_asyncio==1.6.0",
    "networkx==3.2.1",
    "nodeenv==1.9.1",
    "numpy==2.0.2",
    "onnx==1.18.0",
    "packaging==25.0",
    "paginate==0.5.7",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "pip==25.1",
    "platformdirs==4.2.2",
    "pluggy==1.6.0",
    "pre_commit==4.2.0",
    "prompt_toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "Pygments==2.19.1",
    "pygments-ansi-color==0.3.0",
    "pymdown-extensions==10.15",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "setuptools==78.1.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabpfn==2.0.9",
    "tabpfn-client>=0.2.8",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tomli==2.2.1",
    "torch==2.7.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
]




[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.uv.workspace]
members = [
    "pfn-causal-inference",
]

[tool.setuptools]
packages = [
    "src",
    "src.tabpfn",
]
